@@ -1,3 +1,8 @@
+2010-07-22  Juanma Barranquero  <lekktu@gmail.com>
+
+	* dired.el (dired-no-confirm): Document value t and fix defcustom to
+	accept it (bug#6597).  Suggested by Drew Adams <drew.adams@oracle.com>.
+
 2010-07-22  Teemu Likonen  <tlikonen@iki.fi>  (tiny change)
 
 	* dired.el (dired-mode-map): Use command remapping (bug#6632).
